# finui

./: .gitignore  Cargo.toml  README.md
crates/finui-grid/: Cargo.toml
crates/finui-grid/src/: lib.rs
crates/finui-grid/src/financial_data_grid/: action.rs  agent.rs  analytics.rs  cell.rs  column.rs  core.rs  demo.rs  demo_data.rs  export.rs  ids.rs  interaction.rs  menu.rs  mod.rs  paint.rs  persistence.rs  primitive_integration.rs  provenance.rs  render.rs  row.rs  state.rs  viewport.rs
crates/finui-grid/src/financial_data_grid/source/: duckdb_payload.rs  memory.rs  mod.rs  streaming.rs  virtual_source.rs
crates/finui-grid/src/financial_data_grid/tests/: agent.rs  core.rs  mod.rs  state.rs  viewport.rs
crates/finui-primitives/: Cargo.toml
crates/finui-primitives/assets/radix-icons/: README.md
crates/finui-primitives/src/: dialog.rs  layer.rs  lib.rs  overlay.rs
crates/finui-primitives/src/primitives/: alert_dialog.rs  avatar.rs  context_menu.rs  dialog.rs  disclosure.rs  focus.rs  form.rs  hover_card.rs  instrument_browser.rs  layer.rs  layout.rs  menu.rs  menu_bar.rs  mod.rs  navigation.rs  otp.rs  password_toggle.rs  popover.rs  radix_icon.rs  runtime.rs  scroll_area.rs  select.rs  settings.rs  status.rs  theme.rs  toast.rs  toggle.rs  toolbar.rs  tooltip.rs  utility.rs  visual.rs
docs/: accessibility-snapshots.md  agent-ux-receipts.md  api-stability-policy.md  api-surface.md  controlled-uncontrolled-examples.md  dependency-strategy.md  dialog-api-contract.md  icon-contract.md  primitive-accessibility.md  primitive-anatomy.md  primitive-api-reference.md  primitive-keyboard-interactions.md  radix-parity-matrix.md  radix-ux-gap-checklist.md  (+4 more)
(+7 files in other folders)
