[workspace]
resolver = "2"
members = [
    "crates/finui-grid",
    "crates/finui-primitives",
    "examples/grid_lab",
    "examples/primitives_lab",
]

[workspace.package]
edition = "2024"
homepage = "https://github.com/rca32/finui"
license = "Apache-2.0"
repository = "https://github.com/rca32/finui"
documentation = "https://github.com/rca32/finui"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
eframe = { version = "=0.34.2", default-features = false, features = ["default_fonts", "glow", "__screenshot"] }
