[package]
name = "finui-primitives"
version = "0.1.0"
edition = "2024"
description = "Radix-style primitives for egui applications"
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
eframe = { version = "0.34.2", default-features = false, features = ["default_fonts", "glow", "__screenshot", "x11", "wayland"] }
